--- a/styles/utility/global.scss
+++ b/styles/utility/global.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'VT323';
+  src: url('../../public/VT323.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
   padding: 0;
@@ -16,5 +23,6 @@ a {
 }
 
 h1 {
+  font-family: 'VT323', monospace;
   font-size: 3rem;
 };
