settled on fonts and added some temp colors. created the starts of a header component.

--- a/styles/utility/variables.scss
+++ b/styles/utility/variables.scss
@@ -1,13 +1,6 @@
-$orange: #F9C300;
-$brown: #D89782;
-$green: #00FA9A;
-$blue: #77C5F9;
-$dark-blue: #6DB4E3;
-$yellow: #FCFC62;
-$purple: #C495F9;
-$red: #F90049;
-$pink: #F995BF;
-$black: #041B15;
-$white: #F1F7ED;
-$shadow: rgba($black, .3);
-
+$black: #171717;
+$white: #E8E8E8;
+$yellow: #F5DA6C;
+$red: #F9AFAA;
+$green: #AFCDBC;
+$blue: #8CB3DF;
