--- a/styles/utility/global.scss
+++ b/styles/utility/global.scss
@@ -1,28 +1,14 @@
-@font-face {
-  font-family: 'VT323';
-  src: url('../../public/VT323.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,400;0,500;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,700;1,9..40,400;1,9..40,700&family=Lugrasimo&family=VT323&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
+  background-color: $white;
+  background-size: 10px 10px;
+  background-image: radial-gradient(circle, rgba($black, $alpha: 0.1) 1px, rgba(0, 0, 0, 0) 1px);
+  color: $white;
   font-size: 16px;
+  line-height: 1.75;
+  font-family: 'DM Mono', monospace;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-h1 {
-  font-family: 'VT323', monospace;
-  font-size: 3rem;
-};
