started homepage hero

--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -1,9 +1,13 @@
 .container {
+  z-index: 99;
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
+  width: 100%;
   padding: 15px 20px;
-  background-color: $black;
+  box-sizing: border-box;
   color: $white;
 }
 
