--- a/styles/utility/global.scss
+++ b/styles/utility/global.scss
@@ -2,11 +2,15 @@
 
 html,
 body {
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
-  background-color: $white;
-  background-size: 10px 10px;
-  background-image: radial-gradient(circle, rgba($black, $alpha: 0.1) 1px, rgba(0, 0, 0, 0) 1px);
+  background-color: $black;
+  // background-size: 10px 10px;
+  // background-image: radial-gradient(circle, rgba($black, $alpha: 0.1) 1px, rgba(0, 0, 0, 0) 1px);
   color: $white;
   font-size: 16px;
   line-height: 1.75;
