adjusted main to section relationship. adjusted colors. cleaned up scss class structure - need to verify this is correct way to be using scss in next.js

--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -1,6 +1,6 @@
 .container {
   z-index: 99;
-  position: absolute;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
