--- a/styles/utility/variables.scss
+++ b/styles/utility/variables.scss
@@ -1,6 +1,6 @@
-$black: #171717;
-$white: #E8E8E8;
-$yellow: #F5DA6C;
-$red: #F9AFAA;
-$green: #AFCDBC;
-$blue: #8CB3DF;
+$black: #080808;
+$white: #f8f8f8;
+$purple: hsla(242,100%,70%,1);
+$red: hsla(340,100%,76%,1);
+$green: hsla(125,89%,65%,1);
+$blue: hsla(200,100%,70%,1)
