--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -5,42 +5,53 @@
   overflow: hidden;
   height: 100vw;
   max-height: 100vh;
-  width: 100vw;
-  min-width: 100vw;
   box-sizing: border-box;
-  background-color:hsla(207,100%,50%,1);
-  background-image:
-  radial-gradient(at 94% 91%, hsla(200,100%,70%,1) 0px, transparent 50%),
-  radial-gradient(at 16% 7%, hsla(200,100%,70%,1) 0px, transparent 50%),
-  radial-gradient(at 0% 32%, hsla(125,89%,65%,1) 0px, transparent 50%),
-  radial-gradient(at 25% 67%, hsla(200,100%,70%,1) 0px, transparent 50%),
-  radial-gradient(at 52% 62%, hsla(189,75%,74%,1) 0px, transparent 50%),
-  radial-gradient(at 89% 53%, hsla(242,100%,70%,1) 0px, transparent 50%),
-  radial-gradient(at 97% 5%, hsla(340,100%,76%,1) 0px, transparent 50%);
+
+
+  &.heroSection {
+    max-height: 94vh;
+    background-color:hsla(207,100%,50%,1);
+    background-image:
+    radial-gradient(at 94% 91%, hsla(200,100%,70%,1) 0px, transparent 50%),
+    radial-gradient(at 16% 7%, hsla(200,100%,70%,1) 0px, transparent 50%),
+    radial-gradient(at 0% 32%, hsla(125,89%,65%,1) 0px, transparent 50%),
+    radial-gradient(at 25% 67%, hsla(200,100%,70%,1) 0px, transparent 50%),
+    radial-gradient(at 52% 62%, hsla(189,75%,74%,1) 0px, transparent 50%),
+    radial-gradient(at 89% 53%, hsla(242,100%,70%,1) 0px, transparent 50%),
+    radial-gradient(at 97% 5%, hsla(340,100%,76%,1) 0px, transparent 50%);
+  }
 }
 
-.starsR {
+.textLogo {
+  z-index: 99;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'VT323', monospace;
+  font-size: 15vw;
+  line-height: 0;
+  opacity: 0.8;
+}
+
+.stars {
   z-index: 1;
   position: absolute;
   top: 50%;
-  right: 0;
+
   height: auto;
   min-height: 100%;
   width: 40%;
   transform: translate(0, -50%);
   opacity: 0.9;
-}
 
-.starsL {
-  z-index: 1;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  height: auto;
-  min-height: 100%;
-  width: 40%;
-  transform: translate(0, -50%);
-  opacity: 0.9;
+  &R {
+    right: 0;
+  }
+
+  &L {
+    left: 0;
+  }
 }
 
 .aiProfilePic {
