--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -1,7 +1,7 @@
 .sectionWrapper {
+  box-sizing: border-box;
   position: relative;
   overflow: hidden;
-  box-sizing: border-box;
 
   &.heroSection {
     display: flex;
@@ -72,14 +72,14 @@
       z-index: 1;
     }
 
-    .waveEmoji {
+    .aboutWave {
       display: inline-block;
       height: 6vw;
       width: 6vw;
       margin: 0 1.5rem;
     }
 
-    .introH2 {
+    .aboutH2 {
       z-index: 2;
       font-family: 'DM sans';
       font-size: 6vw;
@@ -88,13 +88,176 @@
       font-weight: 800;
     }
 
-    .textBlock {
+    .aboutText {
       z-index: 2;
       margin: 0 0 2rem;
       width: 50vw;
       font-family: 'DM Mono';
       line-height: 1.75;
       font-size: 1.25rem;
+    }
+
+    .resumeButton {
+      z-index: 2;
+      display: flex;
+      align-items: center;
+      position: relative;
+      cursor: pointer;
+      background-color: $black;
+      color: $white;
+      fill: $white;
+      border-radius: 0;
+      border: $white 2px solid;
+      margin: 2rem 0 3rem;
+      padding: 1rem 1.5rem;
+      font-family: 'DM Mono';
+      font-size: 1rem;
+      outline: inherit;
+      transition: border-radius 0.1s linear, background-color 0.1s linear, color 0.1s linear;
+
+      &:hover {
+        border-radius: 15px;
+      }
+
+      &:active {
+        background-color: $white;
+        color: $black;
+        fill: $black;
+      }
+    }
+    
+    .resumeSVG {
+      fill: inherit;
+      margin: 0 0.5rem 0 0;
+    }
+  }
+
+  &.contactSection {
+    position: relative;
+    display: flex;
+    width: 100%;
+    min-height: 100vh;
+    padding: 85px;
+    background-color: #d7d998;
+
+    .contactH2 {
+      z-index: 2;
+      font-family: 'DM sans';
+      font-size: 4vw;
+      letter-spacing: .05vw;
+      font-weight: 800;
+    }
+
+    .copyButton {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      cursor: pointer;
+      background-color: rgb(211,166,205);
+      color: inherit;
+      border: $white 2px solid;
+      margin: 3rem 0 2rem;
+      padding: 1rem 1.5rem;
+      font-family: 'VT323', monospace;
+      font-size: 6vw;
+      font-style: normal;
+      outline: inherit;
+      transition: background-color 0.1s linear, font-style 0.1s linear;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: -2px;
+        left: -2px;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        border: $white 2px dashed;
+        transition: top 0.1s linear, left 0.1s linear;
+      }
+
+      &:hover {
+        font-style: italic;
+
+        &::after {
+          top: 5px;
+          left: 5px;
+        }
+      }
+
+      &:active {
+        background-color: #d7d998;
+      }
+    }
+
+    .copyText {
+      display: block;
+      position: absolute;
+      bottom: -3.5rem;
+      cursor: pointer;
+      font-family: 'DM Mono';
+      font-size: 1rem;
+      font-style: normal;
+    }
+
+    .shuffleButton {
+      cursor: pointer;
+      position: absolute;
+      bottom: 40px;
+      right: 40px;
+      background-color: transparent;
+      border-width: 0;
+      font-family: inherit;
+      font-size: inherit;
+      font-style: inherit;
+      font-weight: inherit;
+      line-height: inherit;
+      padding: 0;
+      mix-blend-mode: overlay;
+      opacity: 0.5;
+      transition: padding-bottom 0.1s linear, opacity 0.1s linear;
+
+      &:hover {
+        padding-bottom: 5px;
+        opacity: 0.7;
+      }
+
+      &:active {
+        padding-bottom: 8px;
+        opacity: 1;
+      }
+    }
+
+    .contactFrame {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      width: 100%;
+      border-radius: 50%;
+      box-shadow:
+      0 0 0 5px $white,
+      0 0 0 9px #d7d998,
+      0 0 0 13px $white,
+      0 0 0 23px #d7d998,
+      0 0 0 25px $white,
+      0 0 0 30px #d7d998,
+      0 0 0 34px $white;
+      background: rgb(211,166,205);
+      z-index: 1;
+
+      &::after {
+        content: '';
+        pointer-events: none;
+        position: absolute;
+        width: calc(100% + 30px);
+        height: calc(100% + 30px);
+        border-radius: 50%;
+        border: $white dotted 5px;
+      }
     }
   }
 }
