--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -138,7 +138,7 @@
     width: 100%;
     min-height: 100vh;
     padding: 85px;
-    background-color: #d7d998;
+    background-color: var(--primary);
 
     .contactH2 {
       z-index: 2;
@@ -155,7 +155,7 @@
       align-items: center;
       position: relative;
       cursor: pointer;
-      background-color: rgb(211,166,205);
+      background-color: var(--secondary);
       color: inherit;
       border: $white 2px solid;
       margin: 3rem 0 2rem;
@@ -188,7 +188,7 @@
       }
 
       &:active {
-        background-color: #d7d998;
+        background-color: var(--primary);
       }
     }
 
@@ -216,17 +216,17 @@
       line-height: inherit;
       padding: 0;
       mix-blend-mode: overlay;
-      opacity: 0.5;
+      opacity: 0.3;
       transition: padding-bottom 0.1s linear, opacity 0.1s linear;
 
       &:hover {
         padding-bottom: 5px;
-        opacity: 0.7;
+        opacity: 0.5;
       }
 
       &:active {
         padding-bottom: 8px;
-        opacity: 1;
+        opacity: 0.7;
       }
     }
 
@@ -240,13 +240,13 @@
       border-radius: 50%;
       box-shadow:
       0 0 0 5px $white,
-      0 0 0 9px #d7d998,
+      0 0 0 9px var(--primary),
       0 0 0 13px $white,
-      0 0 0 23px #d7d998,
+      0 0 0 23px var(--primary),
       0 0 0 25px $white,
-      0 0 0 30px #d7d998,
+      0 0 0 30px var(--primary),
       0 0 0 34px $white;
-      background: rgb(211,166,205);
+      background: var(--secondary);
       z-index: 1;
 
       &::after {
