--- a/styles/components/hypnomarquee.module.scss
+++ b/styles/components/hypnomarquee.module.scss
@@ -2,7 +2,7 @@
   cursor: var(--cursor);
   display: flex;
   justify-content: center;
-  height: 10vw;
+  height: 20vh;
   background: repeating-radial-gradient(
     circle at var(--hypno),
     $black,
