--- a/styles/utility/global.scss
+++ b/styles/utility/global.scss
@@ -9,10 +9,16 @@ body {
   padding: 0;
   margin: 0;
   background-color: $black;
-  // background-size: 10px 10px;
-  // background-image: radial-gradient(circle, rgba($black, $alpha: 0.1) 1px, rgba(0, 0, 0, 0) 1px);
   color: $white;
   font-size: 16px;
   line-height: 1;
   font-family: 'DM Mono', monospace;
+}
+
+button,
+a {
+  &:focus {
+    outline: 2px dashed $green;
+    outline-offset: 4px;
+  }
 }
