--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -1,4 +1,4 @@
-.container {
+.headerWrap {
   z-index: 99;
   position: fixed;
   display: flex;
@@ -6,13 +6,40 @@
   justify-content: space-between;
   box-sizing: border-box;
   width: 100%;
-  padding: 15px 20px;
+  padding: 0.5rem 1rem;
   box-sizing: border-box;
   color: $white;
-}
 
-.textLogo {
-  font-family: 'VT323', monospace;
-  font-size: 2.5rem;
-  line-height: 0;
+  @media (max-width: 700px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .menuBtn {
+    position: relative;
+    box-sizing: border-box;
+    background: none;
+    color: $white;
+    border: none;
+    padding: 0.5rem;
+    font: inherit;
+    cursor: pointer;
+
+    &:nth-child(2) {
+      margin: 0 0 0 auto;
+
+      @media (max-width: 700px) {
+        margin: 0;
+      }
+    }
+  }
+
+  .textLogo {
+    font-family: 'VT323', monospace;
+    font-size: 2.5rem;
+    
+    @media (max-width: 700px) {
+      font-size: 2rem;
+    }
+  }
 }
