--- a/styles/components/hypnomarquee.module.scss
+++ b/styles/components/hypnomarquee.module.scss
@@ -11,8 +11,13 @@
     $white 6vw
   );
   font-family: 'VT323', monospace;
-  font-size: 5vw;
+  font-size: 5rem;
   font-weight: 800;
+
+  @media (max-width: 700px) {
+    height: 10vh;
+    font-size: 2rem;
+  }
 
   .hypnoMarquee {
     overflow: hidden;
