--- a/styles/utility/variables.scss
+++ b/styles/utility/variables.scss
@@ -3,4 +3,8 @@ $white: #f8f8f8;
 $purple: hsla(242,100%,70%,1);
 $red: hsla(340,100%,76%,1);
 $green: hsla(125,89%,65%,1);
-$blue: hsla(200,100%,70%,1)
+$blue: hsla(200,100%,70%,1);
+
+$mono: 'DM Mono', monospace;
+$sans: 'DM Sans', sans-serif;
+$fancy: 'VT323', monospace;
