--- a/styles/components/contact.module.scss
+++ b/styles/components/contact.module.scss
@@ -15,7 +15,7 @@
   .contactH2 {
     z-index: 2;
     font-size: 4vw;
-    font-family: 'DM sans';
+    font-family: $sans;
     font-weight: 800;
     letter-spacing: .05vw;
   }
@@ -33,7 +33,7 @@
     cursor: pointer;
     border: $white 2px solid;
     font-size: 6vw;
-    font-family: 'VT323', monospace;
+    font-family: $fancy;
     font-style: normal;
     color: inherit;
     &::after {
@@ -67,7 +67,7 @@
     bottom: -4rem;
     cursor: pointer;
     font-size: 1rem;
-    font-family: 'DM Mono';
+    font-family: $mono;
     font-style: normal;
   }
 
