--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -32,7 +32,7 @@
 
   .textLogo {
     font-size: 2.5rem;
-    font-family: 'VT323', monospace;
+    font-family: $fancy;
     @media (max-width: 700px) {
       font-size: 2rem;
     }
