--- a/styles/components/hypnomarquee.module.scss
+++ b/styles/components/hypnomarquee.module.scss
@@ -11,7 +11,7 @@
   );
   cursor: var(--cursor);
   font-size: 5rem;
-  font-family: 'VT323', monospace;
+  font-family: $fancy;
   font-weight: 800;
   @media (max-width: 700px) {
     height: 10vh;
