--- a/styles/utility/global.scss
+++ b/styles/utility/global.scss
@@ -1,4 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,400;0,500;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,700;1,9..40,400;1,9..40,700&family=Lugrasimo&family=VT323&display=swap');
+@font-face {
+  font-family: 'DM Mono';
+  src: url('../../public/fonts/DM_Mono/DMMono-Regular.ttf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'DM Sans';
+  src: url('../../public/fonts/DM_Sans/DMSans-Bold.ttf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'VT323';
+  src: url('../../public/fonts/VT323/VT323-Regular.ttf');
+  font-weight: 400;
+  font-style: normal;
+}
 
 html,
 body {
@@ -12,7 +31,7 @@ body {
   color: $white;
   font-size: 16px;
   line-height: 1;
-  font-family: 'DM Mono', monospace;
+  font-family: $mono;
 }
 
 button,
