--- a/styles/utility/global.scss
+++ b/styles/utility/global.scss
@@ -1,22 +1,25 @@
 @font-face {
-  font-family: 'DM Mono';
   src: url('../../public/fonts/DM_Mono/DMMono-Regular.ttf');
-  font-weight: 400;
+  font-display: swap;
+  font-family: 'DM Mono';
   font-style: normal;
+  font-weight: 400;
 }
 
 @font-face {
-  font-family: 'DM Sans';
   src: url('../../public/fonts/DM_Sans/DMSans-Bold.ttf');
-  font-weight: 700;
+  font-display: swap;
+  font-family: 'DM Sans';
   font-style: normal;
+  font-weight: 700;
 }
 
 @font-face {
-  font-family: 'VT323';
   src: url('../../public/fonts/VT323/VT323-Regular.ttf');
-  font-weight: 400;
+  font-display: swap;
+  font-family: 'VT323';
   font-style: normal;
+  font-weight: 400;
 }
 
 html,
@@ -25,13 +28,13 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding: 0;
   margin: 0;
+  padding: 0;
   background-color: $black;
-  color: $white;
   font-size: 16px;
-  line-height: 1;
   font-family: $mono;
+  line-height: 1;
+  color: $white;
 }
 
 button,
