--- a/styles/components/contact.module.scss
+++ b/styles/components/contact.module.scss
@@ -15,6 +15,7 @@
   .contactH2 {
     z-index: 2;
     width: 75%;
+    margin: 4rem 0 0;
     font-size: 4vw;
     font-family: $sans;
     font-weight: 800;
@@ -28,7 +29,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    margin: 2rem 0 2rem;
+    margin: 2rem 0;
     padding: 1rem 1.5rem;
     transition: background-color 0.1s linear, font-style 0.1s linear;
     background-color: var(--secondary);
@@ -66,11 +67,33 @@
   .copyText {
     display: block;
     width: 75%;
+    height: 1rem;
     cursor: pointer;
     font-size: 1rem;
     font-family: $mono;
     font-style: normal;
     text-align: center;
+  }
+
+  .linkWrap {
+    margin: 3rem 0 0;
+
+    .profileLink {
+      display: inline-block;
+      margin: 0 1rem;
+      opacity: 0.9;
+      transition: transform 0.1s linear, opacity 0.1s linear;
+      &:hover {
+        opacity: 1;
+        transform: scale(1.15);
+      }
+  
+      .profileSVG {
+        fill: $white;
+        width: 2rem;
+        height: 2rem;
+      }
+    }
   }
 
   .shuffleButton {
@@ -83,7 +106,7 @@
     right: 2rem;
     opacity: 0.3;
     padding: 0;
-    transition: bottom 0.1s linear, opacity 0.1s linear;
+    transition: transform 0.1s linear, opacity 0.1s linear;
     background-color: transparent;
     cursor: pointer;
     border-width: 0;
@@ -93,13 +116,13 @@
     font-weight: inherit;
     line-height: inherit;
     &:hover {
-      bottom: 2.25rem;
       opacity: 0.5;
+      transform: scale(1.15);
     }
 
     &:active {
-      bottom: 2.5rem;
       opacity: 0.7;
+      transform: scale(1.15);
     }
   }
 
