--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   width: 100%;
   padding: 0.5rem 1rem;
-  color: $white;
+  color: inherit;
   @media (max-width: 700px) {
     flex-direction: column;
     align-items: flex-start;
@@ -21,7 +21,7 @@
     cursor: pointer;
     border: none;
     font: inherit;
-    color: $white;
+    color: inherit;
     transition: font-style 0.1s linear;
     &:nth-child(2) {
       margin: 0 0 0 auto;
