ported cdol as square 1.

--- a/styles/pages/SquareCanvas.module.scss
+++ b/styles/pages/SquareCanvas.module.scss
@@ -1,5 +1,10 @@
 .mainContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
+  padding: 4.5rem 0;
   background-color: $white;
+  color: $black;
 }
 
 .headerWrap {
